# desktop-pet

./: Cargo.toml  ISSUES.md  README.md  build.rs
.github/workflows/: workflow.yml
src/: animator.rs  main.rs  mod.rs  window.rs
src/animation_states/: mod.rs  state_machine.rs
src/animation_states/cave_chaos/: mod.rs  states.json
