[package]
name = "desktop-pet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: remove dynamic before release build
bevy = { version="0.9.1", features=["wayland"] }
bevy_assets_bundler = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.91"

# enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
bevy_assets_bundler = "0.5"
lazy_static = "1.4.0"
